chore: fixed video ui on tablet

--- a/css/_includes/_projectSection.scss
+++ b/css/_includes/_projectSection.scss
@@ -23,6 +23,7 @@
   @media screen and (min-width: $tablet) {
     flex-direction: row;
     justify-content: center;
+    align-items: flex-start;
   }
   @media screen and (min-width: $laptop) {
     width: 100%;
